test-suite/typecheck/pass/record_field_access.first
type P = { x: Int, y: Int };
function f(p: P) -> Int {
  return p.x + p.y;
}
