test-suite/typecheck/fail/arraybuf_in_function.first
function f() -> Unit {
  let buf = arrayBufCreate(4);
  return;
}
